[gd_scene load_steps=39 format=3 uid="uid://cl7b76mxru8tl"]

[ext_resource type="Script" uid="uid://dxacdxwlt5ufc" path="res://Scripts/GUI/gui.gd" id="1_jyhc4"]
[ext_resource type="PackedScene" uid="uid://csf7h3tyeu5ea" path="res://Scenes/GUI/top_button.tscn" id="1_psa72"]
[ext_resource type="PackedScene" uid="uid://bg5tc4tw3t6bv" path="res://Scenes/GUI/bottom_button.tscn" id="2_gm40n"]
[ext_resource type="Texture2D" uid="uid://b71a6e5iqi2p6" path="res://Sprites/button.png" id="3_1wuyf"]
[ext_resource type="Texture2D" uid="uid://d4d1682bns04p" path="res://Sprites/right_click.png" id="4_b4lgj"]
[ext_resource type="Texture2D" uid="uid://c67oeho3qh4m4" path="res://Sprites/health.png" id="5_jtdjp"]
[ext_resource type="Texture2D" uid="uid://c8xvv7086t6el" path="res://Sprites/button_left.png" id="6_1wuyf"]
[ext_resource type="Texture2D" uid="uid://da2ufh82pi13n" path="res://Sprites/energy.png" id="6_p8y2k"]
[ext_resource type="Script" uid="uid://cod0yjphulu1j" path="res://Scripts/GUI/state_progress_bar.gd" id="6_wfw4l"]
[ext_resource type="Texture2D" uid="uid://coo0lnkxede3o" path="res://Sprites/button_right.png" id="7_uyj30"]
[ext_resource type="Texture2D" uid="uid://brvy1vh1sk3y0" path="res://Sprites/mine.png" id="7_wfw4l"]
[ext_resource type="Texture2D" uid="uid://cokpyraa8uyor" path="res://Sprites/beacon.png" id="8_tjoyq"]
[ext_resource type="Script" uid="uid://co1h8rx5o4ko0" path="res://Scripts/GUI/state_progress_label.gd" id="9_tjoyq"]
[ext_resource type="Script" uid="uid://bvhqqs3eife8q" path="res://Scripts/GUI/game_over_control.gd" id="11_whnys"]
[ext_resource type="PackedScene" uid="uid://yfr6gqs64gb0" path="res://Scenes/GUI/help_menu.tscn" id="14_jnahm"]
[ext_resource type="Script" uid="uid://dqjo4f37fcwjc" path="res://Scenes/GUI/help_control.gd" id="15_uyj30"]

[sub_resource type="InputEventAction" id="InputEventAction_gm40n"]
action = &"mi_switch"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_jyhc4"]
events = [SubResource("InputEventAction_gm40n")]

[sub_resource type="LabelSettings" id="LabelSettings_jtdjp"]
font_size = 10

[sub_resource type="InputEventAction" id="InputEventAction_b4lgj"]
action = &"scan_huge_sonar"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_jtdjp"]
events = [SubResource("InputEventAction_b4lgj")]

[sub_resource type="InputEventAction" id="InputEventAction_p8y2k"]
action = &"scan_magnet"

[sub_resource type="Shortcut" id="Shortcut_wfw4l"]
events = [SubResource("InputEventAction_p8y2k")]

[sub_resource type="InputEventAction" id="InputEventAction_jyhc4"]
action = &"mi_toggle"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_b4lgj"]
events = [SubResource("InputEventAction_jyhc4")]

[sub_resource type="InputEventAction" id="InputEventAction_5m8o7"]
action = &"av_back"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_vh4xu"]
events = [SubResource("InputEventAction_5m8o7")]

[sub_resource type="InputEventAction" id="InputEventAction_vh4xu"]
action = &"av_forward"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_p8y2k"]
events = [SubResource("InputEventAction_vh4xu")]

[sub_resource type="InputEventAction" id="InputEventAction_jtdjp"]
action = &"av_quit"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_5m8o7"]
events = [SubResource("InputEventAction_jtdjp")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whnys"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.300356, 0.656854, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8y2k"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfw4l"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.300356, 0.656854, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjoyq"]
bg_color = Color(1, 0.639216, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_tjoyq"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_whnys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyj30"]
bg_color = Color(0.332031, 0.332031, 0.332031, 0.792157)
border_width_left = 3
border_width_bottom = 3
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_size = 1

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jyhc4")

[node name="MainControl" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.02
anchor_top = 0.03
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="HelpButton" parent="MainControl" instance=ExtResource("1_psa72")]
z_index = 100
layout_mode = 1
anchor_left = 0.949653
anchor_right = 1.0
anchor_bottom = 0.114198
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
key = "H"
help = "HELP"
icon = ExtResource("3_1wuyf")
ask_signal_name = "ask_show_help"
mode = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 244.0
grow_vertical = 0

[node name="AdvancedMoveHelp" type="HBoxContainer" parent="MainControl/VBoxContainer"]
layout_mode = 2

[node name="SwitchButton" parent="MainControl/VBoxContainer/AdvancedMoveHelp" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = "TAB"
help = "SWITCH
ALTITUDE
HEADING"
shortcut = SubResource("Shortcut_jyhc4")
ask_signal_name = "ask_switch"

[node name="ValidateRect" type="VBoxContainer" parent="MainControl/VBoxContainer/AdvancedMoveHelp"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MainControl/VBoxContainer/AdvancedMoveHelp/ValidateRect"]
layout_mode = 2
text = "VALIDATE
POSITION
"
label_settings = SubResource("LabelSettings_jtdjp")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TextureRect" type="TextureRect" parent="MainControl/VBoxContainer/AdvancedMoveHelp/ValidateRect"]
layout_mode = 2
texture = ExtResource("4_b4lgj")

[node name="HBoxContainer" type="HBoxContainer" parent="MainControl/VBoxContainer"]
layout_mode = 2

[node name="SonarButton" parent="MainControl/VBoxContainer/HBoxContainer" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = "S"
help = "SONAR"
shortcut = SubResource("Shortcut_jtdjp")
ask_signal_name = "ask_sonar"
metadata/_edit_use_anchors_ = true

[node name="HeatmapButton" parent="MainControl/VBoxContainer/HBoxContainer" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = "D"
help = "MAGNETO-
METER"
shortcut = SubResource("Shortcut_wfw4l")
ask_signal_name = "ask_heatmap"
metadata/_edit_use_anchors_ = true

[node name="BeaconButton" parent="MainControl/VBoxContainer/HBoxContainer" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = "SPACE"
help = "BEACON"
ask_signal_name = "ask_beacon"
mode = 1
metadata/_edit_use_anchors_ = true

[node name="MoveButton" parent="MainControl/VBoxContainer/HBoxContainer" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = "M"
help = "MOVE"
shortcut = SubResource("Shortcut_b4lgj")
ask_signal_name = "ask_move"
mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MainControl/VBoxContainer"]
layout_mode = 2
text = "SUBMARINE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -74.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="MainControl/VBoxContainer2"]
layout_mode = 2

[node name="PrevButton" parent="MainControl/VBoxContainer2/HBoxContainer2" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = ""
help = "PREV
ENTRY"
icon = ExtResource("6_1wuyf")
shortcut = SubResource("Shortcut_vh4xu")
ask_signal_name = "ask_prev_entry"

[node name="NextButton" parent="MainControl/VBoxContainer2/HBoxContainer2" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = ""
help = "next
entry"
icon = ExtResource("7_uyj30")
shortcut = SubResource("Shortcut_p8y2k")
ask_signal_name = "ask_next_entry"

[node name="PresentButton" parent="MainControl/VBoxContainer2/HBoxContainer2" instance=ExtResource("2_gm40n")]
layout_mode = 2
key = "ESC"
help = "present"
shortcut = SubResource("Shortcut_5m8o7")
ask_signal_name = "ask_present"

[node name="Label" type="Label" parent="MainControl/VBoxContainer2"]
layout_mode = 2
text = "SCANNER ARCHIVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MainControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainControl/VBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainControl/VBoxContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_jtdjp")

[node name="HealthProgressBar" type="ProgressBar" parent="MainControl/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_whnys")
theme_override_styles/fill = SubResource("StyleBoxFlat_p8y2k")
step = 1.0
value = 20.0
show_percentage = false
script = ExtResource("6_wfw4l")
initial_value_project_settings_name = "Game/Global/MaxLife"
state_changed_signal_name = "life_state_changed"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainControl/VBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainControl/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_p8y2k")

[node name="EnergyProgressBar" type="ProgressBar" parent="MainControl/VBoxContainer3/HBoxContainer2"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_wfw4l")
theme_override_styles/fill = SubResource("StyleBoxFlat_tjoyq")
value = 50.0
show_percentage = false
script = ExtResource("6_wfw4l")
initial_value_project_settings_name = "Game/Global/MaxEnergy"
state_changed_signal_name = "energy_state_changed"

[node name="HBoxContainer4" type="HBoxContainer" parent="MainControl/VBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainControl/VBoxContainer3/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("8_tjoyq")

[node name="BeaconCountLabel" type="RichTextLabel" parent="MainControl/VBoxContainer3/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "3 / 4"
script = ExtResource("9_tjoyq")
initial_value_project_settings_name = "Game/Global/MaxBeacon"
state_changed_signal_name = "beacon_state_changed"
template_text = "%d / %d"

[node name="HBoxContainer3" type="HBoxContainer" parent="MainControl/VBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainControl/VBoxContainer3/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("7_wfw4l")

[node name="MineCountLabel" type="RichTextLabel" parent="MainControl/VBoxContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "3 / 4"
script = ExtResource("9_tjoyq")
initial_value_project_settings_name = "Game/Global/MaxMines"
state_changed_signal_name = "mine_state_changed_really"
template_text = "%d / %d"
initial_value_at_max = false

[node name="GameOverControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_whnys")

[node name="PanelContainer" type="PanelContainer" parent="GameOverControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverControl/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="GameOverControl/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_tjoyq")
horizontal_alignment = 1
uppercase = true

[node name="spacer" type="Control" parent="GameOverControl/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TextLabel" type="Label" parent="GameOverControl/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "YOU FOUND %d / %d MINES
YOU USED ONLY %d BEACONS
YOU MOVED ONLY %d TIMES"
label_settings = SubResource("LabelSettings_whnys")
horizontal_alignment = 1

[node name="spacer2" type="Control" parent="GameOverControl/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverControl/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="GameOverControl/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play Again ?"

[node name="HelpControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("15_uyj30")

[node name="PanelContainer" type="PanelContainer" parent="HelpControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.2
anchor_right = 0.762
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uyj30")

[node name="HelpMenu" parent="HelpControl/PanelContainer" instance=ExtResource("14_jnahm")]
layout_mode = 2
